# Schedular-AI-Agent

./: .gitignore  .replit  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SETUP_GUIDE.md  package-lock.json  package.json  pyproject.toml  replit.md  start.sh
attached_assets/: Pasted-Take-Home-Assignment-The-Smart-Scheduler-AI-Agent-Welcome-to-the-NextDimension-take-home-assignment-1761499417665_1761499417666.txt
backend/: .env.example  main.py  requirements.txt  token.pickle
backend/models/: schemas.py
backend/services/: calendar_service.py  conversation_service.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/components/: AuthStatus.tsx  AvailableSlots.tsx  ConversationDisplay.tsx  VoiceInterface.tsx
